--- a/style.css
+++ b/style.css
@@ -2,3 +2,26 @@ body{
     color: antiquewhite;
     background-color: black;
 }
+.file-input{
+    display: grid;
+    grid-template-areas: "stack";
+    width: 360px;
+    height: 200px;
+    background-color: darkslateblue;
+    border-radius: 8px;
+}
+.file-input > * {
+    grid-area: stack;
+}
+.file-input > input {
+    opacity: 0;
+}
+.file-input > .drop-zone{
+    margin: 12px;
+    border: dashed 2px #aaaaaa;
+    border-radius: 4px;
+}
+.file-input.active > .drop-zone{
+    margin: 14px;
+    background-color: dadada;
+}
